处理异常,安全登录-mybatis plus-全局异常OK--更新注释

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,9 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.38</version>
+            <!--<version>5.1.38</version>-->
+            <!--mysql8使用下面的版本或者不写-->
+            <version>8.0.13</version>
         </dependency>
 
         <!--*****下面是mybatis plus重要依赖*****-->
