处理异常,安全登录-mybatis plus-全局异常OK--更新注释

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.1.2</version>
         </dependency>
-        <!--添加代码生成器依赖-->
+        <!--mybatis plus添加代码生成器依赖-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
